# ioknife

./: .travis.yml  Makefile  README.md  setup.cfg  setup.py
docs/grepo/: README.md
docs/rest/: README.md
docs/sponge/: README.md
docs/too/: README.md  readme.cast
examples/cli/grepo/: Makefile
examples/cli/grepo/dst/00/: grepo.out
examples/cli/grepo/src/: 00data.txt
examples/cli/rest/: Makefile
examples/cli/rest/dst/00/: grep.out  rest.out
examples/cli/sponge/: Makefile
examples/cli/sponge/dst/01/: use-sponge-append.output  use-sponge.output
examples/cli/too/: Makefile
examples/cli/too/dst/00/: too.output
examples/cli/too/dst/01/: too.output
examples/cli/too/dst/02/: too.output
examples/cli/too/dst/03/: too.output
examples/cli/too/dst/05/: dump-context.output
examples/cli/too/src/: gen.py
examples/cli/too/src/05read-from-stdin/: commands.txt
examples/cli/too/src/06read-with-comment/: commands.txt
ioknife/: aioutils.py  cli.py  signalhandle.py  too.py
ioknife/compat/: _asyncio_py36.py  _contextlib_py36.py
