# see: https://setuptools.readthedocs.io/en/latest/setuptools.html#specifying-values
[metadata]
name = ioknife
version = file:VERSION

summary = knives for io
long_description = file:README.md
long_description_content_type = text/markdown

url = https://github.com/podhmo/ioknife
author = podhmo
author_email = ababjam61+github@gmail.com

[options]
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=0